update connect PostgreSql config

--- a/Demo-Cart-With-DotNetMVC/Demo-Cart-With-DotNetMVC.csproj
+++ b/Demo-Cart-With-DotNetMVC/Demo-Cart-With-DotNetMVC.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Npgsql.FSharp" Version="4.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Cart\" />
+  </ItemGroup>
+
 </Project>
