--- a/Demo-Cart-With-DotNetMVC/appsettings.json
+++ b/Demo-Cart-With-DotNetMVC/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyServer": "Server=localhost;Port=5432;Database=ShoppingCart;UserId=postgres;Password=123"
+  }
 }
