complete Cart in LocalStorage handle

--- a/Demo-Cart-With-DotNetMVC/appsettings.json
+++ b/Demo-Cart-With-DotNetMVC/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyServer": "Server=localhost;Port=5432;Database=ShoppingCart;UserId=postgres;Password=123"
+    "MyServer": "Server=localhost;Port=5432;Database=ShoppingCart;UserId=postgres;Password=123",
+    "Demo_Cart_With_DotNetMVCContext": "Server=(localdb)\\mssqllocaldb;Database=Demo_Cart_With_DotNetMVCContext-c2016532-77e5-47c4-8780-72ffa0f1c9c9;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
