--- a/Demo-Cart-With-DotNetMVC/Demo-Cart-With-DotNetMVC.csproj
+++ b/Demo-Cart-With-DotNetMVC/Demo-Cart-With-DotNetMVC.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
